# RayVis

./: .gitattributes  .gitignore  LICENSE  README.md
project/: CMakeLists.txt
project/d3d12ex/: CMakeLists.txt
project/d3d12ex/libs/: .gitattributes  defaultScene.rayvis
project/d3d12ex/shaders/: Colors.hlsl  Common.hlsl  Raytracing.hlsl  RaytracingAlogrithm.hlsl  VolumeRendering.hlsl
project/d3d12ex/src/: Buffers.cpp  BvhBuilder.cpp  Camera.cpp  Config.cpp  DescriptorHeap.cpp  Mesh.cpp  RayVisDataformat.cpp  Renderer.cpp  Scene.cpp  ShaderCompiler.cpp  ShaderRaytracing.cpp  ShaderVolumeRendering.cpp  SimpleRayMeshGenerator.cpp  TextureBuffer.cpp  UIHandler.cpp  VolumeProvider.cpp  Window.cpp  main.cpp
project/imported/: CMakeLists.txt
project/imported/cli11/: CMakeLists.txt
project/imported/core-configuration/: CMakeLists.txt
project/imported/core-configuration/include/configuration/: Configuration.h  Entry.h  Types.h
project/imported/core-configuration/src/: Configuration.cpp  Entry.cpp
project/imported/core-utils/: CMakeLists.txt
project/imported/core-utils/include/core-utils/: EnumUtils.h  Exceptions.h  FileUtils.h  FlagUtils.h  GlmInclude.h  IteratorUtils.h  ListUtils.h  MathUtils.h  StringUtils.h  TypeUtils.h
project/imported/core-utils/src/: Exceptions.cpp  FileUtils.cpp  ListUtils.cpp  StringUtils.cpp
project/imported/imgui/: CMakeLists.txt
project/imported/imgui/helpers/: imgui_helpers.h
project/imported/json/: CMakeLists.txt
project/imported/linalg/: CMakeLists.txt
project/imported/linalg/src/: linalg_impl.cpp
project/imported/rdf/: CODEOWNERS  gen-ci.py
project/imported/rdf/docs/internal/: gen_registry.py  rdf-registry.json  rdf-registry.schema.json  readme.md  registry.md
project/imported/rdf/docs/internal/chunkFormats/: adapterInfoChunkSpec.md  apiInfoChunkSpec.md  asicInfoChunkSpec.md  ddEventDataChunkSpec.md  gpuMemSegmentInfoChunkSpec.md  rmtDataChunkSpec.md  rmvSnapshotIndexChunkSpec.md  rmvSnapshotInfoChunkSpec.md
project/include/d3d12ex/: Buffers.h  BvhBuilder.h  Camera.h  Config.h  DescriptorHeap.h  IShader.h  Mesh.h  RayVisDataformat.h  Renderer.h  RenderingModes.h  Scene.h  ShaderCompiler.h  ShaderRaytracing.h  ShaderVolumeRendering.h  SimpleRayMeshGenerator.h  TextureBuffer.h  UIHandler.h  VolumeProvider.h  Window.h
project/include/rayloader/: CacheManager.h  Loader.h  RayTrace.h  VolumetricSampler.h
project/include/rayvis-utils/: BreakAssert.h  ChunkedArray3D.h  Clock.h  Color.h  CpuRaytracing.h  DataStructures.h  FastVoxelTraverse.h  FileSystemUtils.h  Keys.h  MathTypes.h  MathUtils.h  Mouse.h
project/rayloader/: CMakeLists.txt
project/rayloader/src/: CacheManager.cpp  Loader.cpp  RayTrace.cpp  VolumetricSampler.cpp
project/rayvis-utils/: CMakeLists.txt
project/rayvis-utils/src/: Clock.cpp  Color.cpp  Keys.cpp  Mouse.cpp
